tests/netconvert/import/XML/errors/phase_state_invalid/errors.netconvert
Error: When adding phase: illegal character '0' in state
Quitting (on error).
